--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProcesamientoDeImágenes"
+        xmlns:local="clr-namespace:ProcesamientoDeImágenes" 
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
         mc:Ignorable="d"
         Title="Picture Lab" Height="768" Width="1366"
         Background="#353459">
@@ -244,7 +245,7 @@
             <Button Click="OnFaceDetectIconClick" Grid.Column="25" Grid.Row="7" Background="Transparent" BorderThickness="0">
                 <Image Source="/Assets/Icons/FaceDetectIcon.png" Stretch="Fill"/>
             </Button>
-            
+
             <Border Grid.Column="4" Grid.ColumnSpan="20" Grid.RowSpan="14" Grid.Row="5" 
         BorderBrush="Black" BorderThickness="2">
                 <Image x:Name="CameraDisplay" Stretch="Uniform" RenderTransformOrigin="0.5,0.5"/>
@@ -259,13 +260,18 @@
 
             <!-- Camera Selection -->
             <ComboBox x:Name="CameraComboBox" 
-          Grid.Column="12" Grid.ColumnSpan="4" 
+          Grid.Column="8" Grid.ColumnSpan="4" 
           Grid.Row="1" Grid.RowSpan="2"
           HorizontalAlignment="Center"
           Margin="0,30,0,0"
           FontFamily="Arial Narrow"
           SelectionChanged="CameraComboBox_SelectionChanged"/>
-           
+
+            <xctk:ColorPicker Name="FaceRectangleColorPicker"
+                        
+                          SelectedColor="Red" Grid.Column="13" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="2" SelectedColorChanged="OnColorChanged"/>
+
+
             <!-- Histogram Red -->
             <Border Grid.Column="31" Grid.ColumnSpan="6" Grid.RowSpan="6" Grid.Row="2" CornerRadius="10"
 BorderBrush="Beige" BorderThickness="2">
@@ -344,6 +350,7 @@ BorderBrush="#FF0F0F26" BorderThickness="2" Padding="5" CornerRadius="10" Render
                         <Button Content="Mosaic Filter" Style="{StaticResource RoundedButtonStyle}" Click="OnFilterButtonClick"/>
                         <Button Content="Retro Effect" Style="{StaticResource RoundedButtonStyle}" Click="OnFilterButtonClick"/>
                         <Button Content="Warp Filter" Style="{StaticResource RoundedButtonStyle}" Click="OnFilterButtonClick"/>
+                        <Button Content="Color Mask" Style="{StaticResource RoundedButtonStyle}" Click="OnFilterButtonClick"/>
                     </StackPanel>
                 </ScrollViewer>
             </Border>
