--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
@@ -248,8 +248,12 @@
 
             <Border Grid.Column="4" Grid.ColumnSpan="20" Grid.RowSpan="14" Grid.Row="5" 
         BorderBrush="Black" BorderThickness="2">
-                <Image x:Name="CameraDisplay" Stretch="Uniform" RenderTransformOrigin="0.5,0.5"/>
+                <Image x:Name="CameraDisplay" Stretch="Uniform" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="CameraDisplay_MouseLeftButtonDown"/>
             </Border>
+
+
+
+            <TextBox x:Name="HexColorTextBox" IsReadOnly="True" Grid.Column="2" Grid.ColumnSpan="7" Grid.Row="2" Grid.RowSpan="1"/>
 
 
             <!-- Camera Input (Filters) -->
@@ -260,7 +264,7 @@
 
             <!-- Camera Selection -->
             <ComboBox x:Name="CameraComboBox" 
-          Grid.Column="8" Grid.ColumnSpan="4" 
+          Grid.Column="10" Grid.ColumnSpan="4" 
           Grid.Row="1" Grid.RowSpan="2"
           HorizontalAlignment="Center"
           Margin="0,30,0,0"
@@ -269,7 +273,7 @@
 
             <xctk:ColorPicker Name="FaceRectangleColorPicker"
                         
-                          SelectedColor="Red" Grid.Column="13" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="2" SelectedColorChanged="OnColorChanged"/>
+                          SelectedColor="Red" Grid.Column="15" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="2" SelectedColorChanged="OnColorChanged"/>
 
 
             <!-- Histogram Red -->
