--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/Camera.xaml
@@ -247,24 +247,24 @@
             </Button>
 
             <Border Grid.Column="4" Grid.ColumnSpan="20" Grid.RowSpan="14" Grid.Row="5" 
-        BorderBrush="Black" BorderThickness="2">
+        BorderBrush="Black" BorderThickness="2" CornerRadius="10">
                 <Image x:Name="CameraDisplay" Stretch="Uniform" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="CameraDisplay_MouseLeftButtonDown"/>
             </Border>
 
 
 
-            <TextBox x:Name="HexColorTextBox" IsReadOnly="True" Grid.Column="2" Grid.ColumnSpan="7" Grid.Row="2" Grid.RowSpan="1"/>
+            <TextBox x:Name="HexColorTextBox" IsReadOnly="True" Grid.Column="3" Grid.ColumnSpan="7" Grid.Row="2" Grid.RowSpan="1"/>
 
 
             <!-- Camera Input (Filters) -->
-            <Border Grid.Column="4" Grid.ColumnSpan="20" Grid.RowSpan="14" Grid.Row="5" BorderBrush="Black" BorderThickness="2">
+            <Border Grid.Column="4" Grid.ColumnSpan="20" Grid.RowSpan="14" Grid.Row="5" BorderBrush="Black" BorderThickness="2" CornerRadius="10">
                 <Image x:Name="FilteredImage" Stretch="Fill" >
                 </Image>
             </Border>
 
             <!-- Camera Selection -->
             <ComboBox x:Name="CameraComboBox" 
-          Grid.Column="10" Grid.ColumnSpan="4" 
+          Grid.Column="12" Grid.ColumnSpan="4" 
           Grid.Row="1" Grid.RowSpan="2"
           HorizontalAlignment="Center"
           Margin="0,30,0,0"
@@ -273,7 +273,7 @@
 
             <xctk:ColorPicker Name="FaceRectangleColorPicker"
                         
-                          SelectedColor="Red" Grid.Column="15" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="2" SelectedColorChanged="OnColorChanged"/>
+                          SelectedColor="Red" Grid.Column="18" Grid.ColumnSpan="8" Grid.RowSpan="1" Grid.Row="2" SelectedColorChanged="OnColorChanged"/>
 
 
             <!-- Histogram Red -->
