--- a/ProcesamientoDeImágenes/ProcesamientoDeImágenes/PixelInfoWindow.xaml
+++ b/ProcesamientoDeImágenes/ProcesamientoDeImágenes/PixelInfoWindow.xaml
@@ -5,74 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProcesamientoDeImágenes"
         mc:Ignorable="d"
-        Title="Pixel LAB Information" Height="180" Width="300"
+        Title="Pixel LAB Information" Height="615" Width="800"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         Background="#353459">
 
     <Window.Resources>
-
         <Style TargetType="TextBlock">
             <Setter Property="FontFamily" Value="Arial Narrow"/>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="FontFamily" Value="Arial Narrow"/>
-        </Style>
-        <Style x:Key="SidebarButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Padding" Value="10"/>
-            <Setter Property="HorizontalAlignment" Value="Stretch"/>
-            <Setter Property="Cursor" Value="Hand"/>
-            <Setter Property="FontFamily" Value="Arial Narrow"/>
-
-            <Setter Property="Template">
-
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
-                            <ContentPresenter HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#211259"/>
-                </Trigger>
-                <Trigger Property="IsPressed" Value="True">
-                    <Setter Property="Background" Value="#264CBF"/>
-                </Trigger>
-            </Style.Triggers>
-
-        </Style>
-        <Style x:Key="RoundedButtonStyle" TargetType="Button">
-            <Setter Property="Padding" Value="10,5"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Background" Value="#FF0F0F26"/>
             <Setter Property="Foreground" Value="White"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontFamily" Value="Arial Narrow"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="10" Padding="5">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
         </Style>
-
     </Window.Resources>
-    
+
     <Grid Margin="15">
         <StackPanel>
             <TextBlock x:Name="CoordinatesTextBlock" FontSize="14" Margin="0,0,0,10"/>
             <TextBlock x:Name="LTextBlock" FontSize="14" Margin="0,0,0,5"/>
             <TextBlock x:Name="ATextBlock" FontSize="14" Margin="0,0,0,5"/>
-            <TextBlock x:Name="BTextBlock" FontSize="14"/>
+            <TextBlock x:Name="BTextBlock" FontSize="14" Margin="0,0,0,10"/>
+
+            <Canvas x:Name="LabCanvas"
+        Width="400" Height="400"
+        Margin="0,10,0,0"
+        HorizontalAlignment="Center"
+        Background="White"
+/>
+
         </StackPanel>
     </Grid>
+
 </Window>
